# lab-05

./: CMakeLists.txt
.github/: .coveralls.yaml
.github/workflows/: main.yml
banking/: CMakeLists.txt
tests/: test.cpp
